--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/bpalomino5/ThermoPi#readme",
   "dependencies": {
+    "blynk-library": "^0.4.7",
     "node-dht-sensor": "0.0.32",
+    "onoff": "^1.1.2",
     "pigpio": "^0.6.0"
   }
 }
